# spi-dumping

./: README.md
spi-pio/: CMakeLists.txt  clocked_input.c  clocked_input.pio
spi-snoop/: CMakeLists.txt  main.c
